fixed social icons color when dark mode is on

--- a/static/css/name_app_stylesheet.css
+++ b/static/css/name_app_stylesheet.css
@@ -169,7 +169,6 @@ h2 {
 
 .social-media {
 	font-size: 2em;
-	color: #fff;
 	display: inline-block;
 }
 
